added first componenet

--- a/client/src/app/feed/feed.component.html
+++ b/client/src/app/feed/feed.component.html
@@ -1,3 +1,16 @@
-<p>
-  feed works!
-</p>
+
+
+<section id="ala-post-feed"> 
+
+  <div id="ala-posts">
+    
+    <ul id="ala-post-list">
+      <li class="ala-post"><ala-post></ala-post></li>
+    </ul>
+
+  </div>
+  <div id="ala-comments">
+      
+  </div>
+
+</section>
