Improved the styling infrustructure

--- a/client/src/app/feed/feed.component.html
+++ b/client/src/app/feed/feed.component.html
@@ -4,9 +4,9 @@
 
   <div id="ala-posts">
     
-    <ul id="ala-post-list">
-      <li class="ala-post"><ala-post></ala-post></li>
-    </ul>
+    <md-list id="ala-post-list">
+      <md-list-item class="ala-post"><ala-post></ala-post></md-list-item> 
+    </md-list>
 
   </div>
   <div id="ala-comments">
