styled the posts a bit

--- a/client/src/app/feed/feed.component.scss
+++ b/client/src/app/feed/feed.component.scss
@@ -1,3 +1,21 @@
-section#ala-post-feed div#ala-posts ul#ala-post-list {
-            list-style-type: none;
+md-grid-list#ala-post-feed {
+    
+    md-grid-tile#ala-posts {
+        
+        md-list#ala-post-list {
+            width: 100%;
+
+            md-list-item.ala-post {
+                margin: 3.8em 0;
+
+                ala-post {
+                    width: 90%;
+                }
+
+            }
+
+        }
+
+    }
+
 }
