--- a/client/src/app/feed/feed.component.html
+++ b/client/src/app/feed/feed.component.html
@@ -1,16 +1,17 @@
 
 
-<section id="ala-post-feed"> 
+<md-grid-list id="ala-post-feed" cols="2" rowHeight="2:1"> 
 
-  <div id="ala-posts">
+  <md-grid-tile id="ala-posts">
     
     <md-list id="ala-post-list">
       <md-list-item class="ala-post"><ala-post></ala-post></md-list-item> 
+      <md-list-item class="ala-post"><ala-post></ala-post></md-list-item> 
     </md-list>
 
-  </div>
-  <div id="ala-comments">
+  </md-grid-tile>
+  <md-grid-tile id="ala-comments">
       
-  </div>
+  </md-grid-tile>
 
-</section>
+</md-grid-list>
