--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <a routerLink="/profile" routerLinkActive="active">Profile</a>
-  <a routerLink="/feed" routerLinkActive="active">Feed</a>
+  <a routerLink="/profile" routerLinkActive="active">פרופיל</a>
+  <a routerLink="/feed" routerLinkActive="active">פוסטים</a>
 </nav>
 <router-outlet></router-outlet>
