--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -1,3 +1,15 @@
-<md-card>
-  <img [src]="aladin.jpg" id="ala-profile-image"/>
-</md-card>
+<section id="ala-profile-info"> 
+
+  <div id="ala-profile">
+    <md-card>
+      <div>
+        <img src="../../assets/aladin.jpg" id="ala-profile-image"/>
+      </div>
+      <span id="ala-profile-name">{{name}}</span>
+      <md-list id="ala-my-posts" >
+         <md-list-item *ngFor="let post of myPosts"> <ala-post></ala-post> </md-list-item> <!--Use post component-->
+      </md-list>
+    </md-card>
+  </div>
+
+</section>
