my posts data mock works

--- a/client/src/app/post/post.component.html
+++ b/client/src/app/post/post.component.html
@@ -2,5 +2,5 @@
   <div class="ala-post-image-holder">
     <img src="../assets/aladin.png" alt="User" class="ala-post-image">
   </div>
-  <p class="ala-post-text">post!</p>
+  <p class="ala-post-text">{{request.requestBody.text}}</p>
 </md-card>
