--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -5,10 +5,16 @@
       <div>
         <img src="../../assets/aladin.jpg" id="ala-profile-image"/>
       </div>
+      <div>
       <span id="ala-profile-name">{{name}}</span>
-      <md-list id="ala-my-posts" >
-         <md-list-item *ngFor="let post of myPosts"> <ala-post></ala-post> </md-list-item> <!--Use post component-->
-      </md-list>
+      </div>
+      <div>
+        <md-list id="ala-my-posts" >
+          <md-list-item *ngFor="let post of myPosts"> 
+            <ala-post [request]="post"></ala-post>
+          </md-list-item>
+        </md-list>
+      </div>
     </md-card>
   </div>
 
