--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background: #dde1e6;
+    margin: 0;
+    background: #fffcd5;
 }
