--- a/client/src/app/post/post.component.html
+++ b/client/src/app/post/post.component.html
@@ -1,6 +1,6 @@
 <md-card class="ala-post-card">
-  <div class="ala-post-image-holder">
-    <img src="../assets/aladin.png" alt="User" class="ala-post-image">
-  </div>
-  <p class="ala-post-text">{{request.requestBody.text}}</p>
+  <md-card-header>
+    <div md-card-avatar class="ala-post-image"></div>
+  </md-card-header>
+  <p class="ala-post-text"></p>
 </md-card>
