--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -13,7 +13,10 @@
   <!-- This fills the remaining space of the current row -->
   <span class="fill-remaining-space"></span>
 
-  <span class="ala-app-name">Aladin</span>
+  <div id="ala-app-logo">
+    <span class="ala-app-name">Aladin</span>
+    <img src="../assets/lampicon.png" alt="Lamp" />
+  </div>
 
 </md-toolbar>
 
