Added mor style changes

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -70,7 +70,7 @@ md-toolbar.ala-nav-toolbar {
                 height: 100%;
 
                 div.ala-nav-profile-image {
-                    background-image: url('../assets/aladin.png');
+                    background-image: url('../assets/images/aladin.png');
                     background-size: cover;
 
                     position: absolute;
