--- a/client/src/app/post/post.component.scss
+++ b/client/src/app/post/post.component.scss
@@ -3,7 +3,7 @@ md-card.ala-post-card {
   background: white;
 
   div.ala-post-image {
-    background-image: url('../../assets/aladin.png');
+    background-image: url('../../assets/images/aladin.png');
     background-size: cover;
 
     &.mat-card-avatar {
