--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+    font-family: "VarelaRound";
+    src: url('./assets/fonts/VarelaRound-Regular.ttf');
+}
+
+
 body {
     margin: 0;
     background: #fffcd5;
     direction: rtl;
+}
+
+body * {
+    font-family: "VarelaRound", Verdana, Tahoma;
 }
