--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,10 +1,9 @@
-$nav-background: #65e481;
-$button-background: #d5f79e;
-$button-hover: #81ec94;
+$button-background: #ffcb03;
+$button-hover: #ffb151;
 
 md-toolbar.ala-nav-toolbar {
     padding: 0;
-    background: $nav-background;
+    background-image: linear-gradient(to right top, #8e44ad 0%, #3498db 100%);
 
     div#ala-app-logo {
         margin-left: 0.8em;
@@ -13,6 +12,8 @@ md-toolbar.ala-nav-toolbar {
             position: absolute;
             top: 0.9em;
             left: 3.6em;
+
+            color: white;
         }
     
         img {
@@ -41,7 +42,7 @@ md-toolbar.ala-nav-toolbar {
             font-size: 0.8em;
             font-weight: bold;
 
-            transition: 0.3s background ease-in-out;
+            transition: 0.3s all ease-in-out;
 
             &:hover {
                 background: $button-hover;
