--- a/client/src/app/feed/feed.component.html
+++ b/client/src/app/feed/feed.component.html
@@ -5,8 +5,9 @@
   <md-grid-tile id="ala-posts">
     
     <md-list id="ala-post-list">
-      <md-list-item class="ala-post"><ala-post></ala-post></md-list-item> 
-      <md-list-item class="ala-post"><ala-post></ala-post></md-list-item> 
+      <md-list-item class="ala-post" *ngFor="let post of posts | async"> 
+        <ala-post [request]="post"></ala-post>
+      </md-list-item> 
     </md-list>
 
   </md-grid-tile>
