fixed profile preview

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -15,7 +15,7 @@
 
   <div id="ala-app-logo">
     <span class="ala-app-name">Aladin</span>
-    <img src="../assets/lampicon.png" alt="Lamp" />
+    <img src="../assets/images/lampicon.png" alt="Lamp" />
   </div>
 
 </md-toolbar>
