Fixed feed view

--- a/client/src/app/feed/feed.component.html
+++ b/client/src/app/feed/feed.component.html
@@ -1,6 +1,6 @@
 
 
-<md-grid-list id="ala-post-feed" cols="2" rowHeight="2:1"> 
+<md-grid-list id="ala-post-feed" cols="2"> 
 
   <md-grid-tile id="ala-comments">
       
