fixing bug with routes and user

--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
       <md-card-header>
         <div md-card-avatar class="ala-profile-image"></div>
         <div id="ala-profile-data">
-          <md-card-title id="ala-profile-name">{{user.name}}</md-card-title>
+          <md-card-title id="ala-profile-name">{{user.displayName}}</md-card-title>
           <md-card-subtitle>בסיס</md-card-subtitle>
           <span>כישורים:</span>
           <ul id="ala-profile-data-skills">
