--- a/client/src/app/post/post.component.html
+++ b/client/src/app/post/post.component.html
@@ -2,5 +2,6 @@
   <md-card-header>
     <div md-card-avatar class="ala-post-image"></div>
   </md-card-header>
+  <span class="ala-post-date">{{request.created | date :  "dd/MM/yyyy"}}</span>
   <p class="ala-post-text">{{request.requestBody.text}}</p>
 </md-card>
