Ratings and navigate to profile with userId

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <md-toolbar class="ala-nav-toolbar" color="primary">
  
   <nav id="ala-nav">
-    <md-card id="ala-nav-profile" routerLink="/profile" routerLinkActive="active">
+    <md-card id="ala-nav-profile" [routerLink]="['profile','meir']" routerLinkActive="active">
       <md-card-header>
         <div md-card-avatar class="ala-nav-profile-image"></div>
         <md-card-title>אלדין</md-card-title>
