--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -18,7 +18,7 @@
         <div>
           <md-list id="ala-my-posts" *ngIf="myPosts">
             <md-list-item *ngFor="let post of myPosts"> 
-              <ala-post [request]="post"></ala-post>
+              <ala-post [post]="post"></ala-post>
             </md-list-item>
           </md-list>
         </div>
