--- a/client/src/app/post/post.component.html
+++ b/client/src/app/post/post.component.html
@@ -1,8 +1,23 @@
-<md-card class="ala-post-card">
+<md-card class="ala-post-card" [ngClass]="{'completed': post.completed}">
   <md-card-header>
     <div md-card-avatar class="ala-post-image" (click)="navToProfile(post.user.id)"></div>
   </md-card-header>
+  <span class="ala-post-rating">
+    <i class="material-icons orange600">star</i>
+    <span class="ala-post-rating-number">{{post.user.rating}}</span>
+  </span>
   <span class="ala-post-date">{{post.created | date :  "dd/MM/yyyy hh:mm:ss"}}</span>
   <p class="ala-post-text">{{post.requestBody.text}}</p>
-  <p>{{post.user.rating}}</p>
+  <div class="ala-reply-panel" *ngIf="!post.replies && !post.completed">
+    <i class="material-icons orange600">check</i>
+  </div>
+  <md-card-content>
+    <md-chip-list class="ala-post-tags">
+      <md-chip *ngFor="let tag of post.requestBody.tags"
+          selected="true"
+          style.backgroundColor="{{generateColor(tag)}}">
+        {{tag}}
+      </md-chip>
+    </md-chip-list>
+  </md-card-content>
 </md-card>
